--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/open?id=16W6fgMWJJ48i9K5oD_KHt5ty4S9LmLcj" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
