--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Personal Web Page</title>
+	<title>Miguel´s Web Page</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -57,8 +57,8 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I´m Miguel Angel Pimentel Vallejo.</h1>
-            <h3>I´m an Electronic <span> engineering </span>, <span>recently graduated,</span> who whants <span> the better place to work </span> ,
-            I´m a creative, enthusiat, fun and worker, if you want know more for me click in <a class="smoothscroll" href="#about"> About me</a>, or just scrolling.</h3>
+            <h3>I´m an Electronic <span> engineering </span>, <span>recently graduated,</span> who whant <span> the better place to work </span> ,
+            I´m a creative, enthusiat, fun and worker, if you want know more for me click on <a class="smoothscroll" href="#about"> About me</a>, or just scrolling.</h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/miguel-angel-pimentel-vallejo-a69928179/
@@ -119,7 +119,8 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://drive.google.com/open?id=16W6fgMWJJ48i9K5oD_KHt5ty4S9LmLcj" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/open?id=16W6fgMWJJ48i9K5oD_KHt5ty4S9LmLcj" class="button"><i class="fa fa-download"></i>Download English Resume</a>
+					 <a href="https://drive.google.com/open?id=1wzZBAyjP3nyHSZ4iBbSMBEAvOfySMZZL" class="button"><i class="fa fa-download"></i>Download Spanish Resume</a>
                   </p>
                </div>
 
