--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <p>
 					-Third best average of the generation.<br>
 					- Average of 9.<br>
-					- Thesis "Sistema embebido para hardware in the loop de un generador en esquema motor de CD - Generador Síncrono vía UDP/IP".
+			  		-<a href="https://drive.google.com/file/d/1ww709VOugeNuZYg-IciZjQr6zlR2SP11/view"> Thesis "Sistema embebido para hardware in the loop de un generador en esquema motor de CD - Generador Síncrono vía UDP/IP".</a>
                   </p>
 
                </div>
