--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <!-- Favicons
 	================================================== -->
 	<link rel="shortcut icon" href="favicon.png" >
-
+<meta name="google-site-verification" content="9f_JVrp43VrjcLX2xubxYPvtUcyLm4HyXVYjNTUSMMQ" />
 </head>
 
 <body>
