--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   <p class="info">Electronic engineering <span>&bull;</span> <em class="date">July 2019</em></p>
 
                   <p>
-					-Third best average of the generation.<br>
+					- Third best qualification of the generation.<br>
 					- Average of 9.<br>
 			  		-<a href="https://drive.google.com/file/d/1ww709VOugeNuZYg-IciZjQr6zlR2SP11/view"> Thesis "Sistema embebido para hardware in the loop de un generador en esquema motor de CD - Generador Síncrono vía UDP/IP".</a>
                   </p>
